Added MapConverter simple way to convert something from type a to b and support generic commands
Have unit tests ready
Closes #296